# advent-of-code-2021

./: Cargo.toml  README.md
src/: lib.rs  parsing.rs  util.rs
src/data/: coordinate.rs  mod.rs
src/tools/: iterator.rs  mod.rs  string.rs
